--- a/Syn.html
+++ b/Syn.html
@@ -13,7 +13,7 @@
     <div id="tekst">
         <h1>W Balladzie "Król Elfów" ojciec razem z synem nocą pędzą na koniu przez las, podczas podróży
         do syna przemawia Król Elfów "Pójdź do mnie, chodź do mnie człopczyno bez obaw!". Jednak ojciec chłopca
-        mówi mu że to tylko wiatr. Ojciec nie wierzy w istnienie Króla Elfów do momentu w którym jego syn zmarł.</h1>
+        mówi mu że to tylko wiatr. Ojciec nie wierzy w istnienie Króla Elfów. Dziecko ma gorączkę, majaczy i streszcza ojcu swoje widzenia.</h1>
     </div>
     </body>
     <footer>
