--- a/Król.html
+++ b/Król.html
@@ -11,8 +11,8 @@
         <img src="król.png" width="831" height="556" class="center">
     </div>
     <div id="tekst">
-        <h1>Król Elfów, postać w którą istnienie wierzy syn. Król przez całą powieść zachęca bezbronnego chłopca 
-            różnymi zabawami i pozbawieniem cierpień aby ten do niego dołączył. Król nie uznaje sprzeciwu i zabija
+        <h1>Król Elfów, bardzo mroczna i tajemnicza postać w którą istnienie wierzy syn. Król przez całą powieść zachęca bezbronnego chłopca 
+            różnymi zabawami aby ten do niego dołączył, chłopiec jednak nie daje sie namówić. Król nie uznaje sprzeciwu i zabija
             chłopca.   </h1>
     </div>
     </body>
