--- a/Syn.html
+++ b/Syn.html
@@ -8,7 +8,7 @@
     </div>
     </header>
     <div id="obraz">
-        <img src="syn.jpg" width="831" height="556" class="center">
+        <img id="ojciecc" src="syn.jpg" width="831" height="556" class="center">
     </div>
     <div id="tekst">
         <h1>W Balladzie "Król Elfów" ojciec razem z synem nocą pędzą na koniu przez las, podczas podróży
