--- a/Ojciec.html
+++ b/Ojciec.html
@@ -8,7 +8,7 @@
     </div>
     </header>
     <div id="obraz">
-        <img src="syn.jpg" width="831" height="556" class="center">
+        <img id="ojciecc" src="syn.jpg" width="831" height="556" class="center">
     </div>
     <div id="tekst">
         <h1>Ojciec w balladzie "Król Elfów" nie wierzy swojemu synowi kiedy ten opowiada mu o tym jak Król
