--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="Syn.html" id="synek"><h2>|Syn|</h2></a>
         <a href="Ojciec.html" id="stary"><h2>|Ojciec| </h2></a>
         <a href="Król.html" id="krol"><h2>|Król Elfów| </h2></a>
-        <h2>Autor Strony: Adrian Okulicz 2cT INFOTECH</h2>
-        <h2>Strona robiona od podstaw bez użycia szablonów</h2>
+        <h2 id="n">Autor Strony: Adrian Okulicz 2cT INFOTECH</h2>
+        <h2 id="n">Strona robiona od podstaw bez użycia szablonów</h2>
     </footer>
 </HTML> 
